# triangular-arbitrage

./: .env.example  Cargo.toml  IMPROVEMENTS.md  README.md
src/: config.rs  lib.rs  main.rs
src/arbitrage/: mod.rs
src/exchanges/: binance.rs  bybit.rs  mod.rs  order_book.rs
