[package]
name = "triangular-arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
rust_decimal = { version = "1.33", features = ["serde-float"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
futures-util = "0.3"
thiserror = "1.0"
backoff = "0.4"
dashmap = "5.5"
once_cell = "1.19"
urlencoding = "2.1"
tempfile = "3.8"